adding auth, public / private feeds to ensure MM bot can properly simulate market activity